<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/fondo_fragment"
    android:layout_height="match_parent"
    tools:context="com.delhel.dorman.uachiman.Fragmentos.Ingreso_novedad">


    <TextView
        android:id="@+id/tex_gere"
        android:padding="5dp"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:text="@string/tex_gerencia_nov"
        android:layout_height="wrap_content" />



            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                style="@style/spinner_style"
                android:id="@+id/spinner"
               />


    <TextView
        android:id="@+id/tip_nov"
        android:layout_width="match_parent"
        android:text="@string/text_tipo_nov"
        android:padding="5dp"
        android:textSize="12dp"
        android:layout_height="wrap_content" />



            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/spinner2"
                style="@style/spinner_style"
               />

    <TextView
        android:id="@+id/nov"
        android:layout_width="match_parent"
        android:text="@string/text_novedad"
        android:textSize="12dp"
        android:padding="5dp"
        android:layout_height="wrap_content" />



            <EditText
                style="@style/CusmerEditexborder"
                android:hint="|"
                android:cursorVisible="true"
               />


            <TextView
                android:id="@+id/prio"
                android:layout_width="match_parent"
                android:text="@string/text_prioridad_nov"
                android:padding="5dp"
                android:textSize="12dp"
                android:layout_height="wrap_content" />



          <android.support.v7.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

            <RadioGroup
                android:orientation="horizontal"
                android:padding="7dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:textSize="12dp"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_emergencia"
                    android:padding="5dp"
                    android:id="@+id/radioButton3"
                    android:layout_gravity="right" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_rutina"
                    android:textSize="12dp"
                    android:padding="5dp"
                    android:id="@+id/radioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_consigna"
                    android:textSize="12dp"
                    android:padding="5dp"
                    android:id="@+id/radioButton2"
                    android:layout_gravity="center_horizontal" />

            </RadioGroup>
          </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <Button
            style="@style/Estilo_boton_rojo"
            android:text="@string/registrar_novedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

