<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/fondo_fragment"
    tools:context="com.delhel.dorman.uachiman.Fragmentos.Ingreso_delivery">


    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tex_requiere_dni"
                android:textColor="@color/morado" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/tex_gerencia"
                android:padding="4dp"
                android:textColor="@color/lineaGris_Oscuro"
                android:layout_height="match_parent" />



            <AutoCompleteTextView
                android:id="@+id/cbo_gerencia"
                android:layout_width="match_parent"
                android:padding="10dp"
                style="@style/spinner_style"
                android:layout_height="45dp"></AutoCompleteTextView>




            <TextView
                android:layout_width="match_parent"
                android:text="@string/tex_datos_empresa"
                android:padding="5dp"
                android:paddingLeft="12dp"
                android:gravity="center_vertical"
                android:layout_height="match_parent" />




            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp">


                    <EditText
                        android:layout_width="200dp"
                        android:id="@+id/ruc_autocomplete"
                        android:hint="@string/hint_ingrese_ruc"
                        android:inputType="number"
                        android:layout_marginBottom="5dp"
                        android:maxLength="11"
                        style="@style/CusmerEditexborder" />

                    <Button
                        android:id="@+id/buscar_ruc"
                        android:padding="5dp"
                        android:drawableLeft="@drawable/search"
                        android:layout_marginLeft="10dp"
                        style="@style/Estilo_boton_rojo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buscar"/>


                </LinearLayout>




                <EditText
                    android:id="@+id/empresa_delivery"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_ingrese_empresa"
                    style="@style/CusmerEditexborder"
                    />

                <EditText
                    android:id="@+id/txt_obserbacion"
                    android:hint="@string/hint_ingrese_observacion"
                    android:layout_marginBottom="5dp"
                    style="@style/CusmerEditexborder" />


            </LinearLayout>




            <TextView
                android:text="@string/tex_seleccione_repartidor"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:textColor="@color/lineaGris_Oscuro"
                android:layout_height="wrap_content" />



            <Spinner
                android:id="@+id/cbo_repartidor"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                ></Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Estilo_boton_rojo"
                    android:layout_marginTop="10dp"
                    android:text="@string/registrar_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
