<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/fondo_fragment"
    tools:context="com.delhel.dorman.uachiman.Fragmentos.Ingreso_profesional">

    <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txz"
                android:text="@string/tex_requiere_dni"
                android:layout_width="match_parent"
                android:textColor="@color/morado"
                android:layout_marginBottom="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tipo_"
                android:text="@string/tex_gerencia"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/spinner3"
                        style="@style/spinner_style"
                        android:layout_gravity="left|top"
                       />


            <EditText
                android:id="@+id/txtservicio"
                android:layout_marginTop="5dp"
                style="@style/CusmerEditexborder"
                android:hint="@string/hint_ingrese_servicio"
              />




            <android.support.v7.widget.CardView
                android:id="@+id/view_Car2"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/txtvisitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:id="@+id/cont_texto"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <AutoCompleteTextView
                        android:id="@+id/autocompletDNI"
                        android:hint="@string/hint_ingrese_dni"
                        android:inputType="number"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:maxLength="8"
                        android:background="@drawable/edit_text_blanco"
                        android:layout_margin="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <EditText
                        android:id="@+id/txtnom_invit"
                        android:layout_weight="2"
                        android:hint="@string/hint_ingrese_nombre"
                        android:layout_below="@+id/txtvisitante"
                        android:background="@drawable/edit_text_blanco"
                        android:padding="10dp"
                        android:layout_margin="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/btn_agregar"
                        android:layout_weight="4"
                        android:textColor="@color/blanco"
                        android:background="@drawable/fondo_boton"
                        android:layout_height="44dp" android:text="+" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/recicle_profecional">
            </android.support.v7.widget.RecyclerView>


            <Button
                style="@style/Estilo_boton_rojo"
                android:layout_marginTop="10dp"
                android:text="@string/btn_guardar_ingreso"
                android:id="@+id/button"
               />

 </LinearLayout>



</FrameLayout>
